--- a/css/global.css
+++ b/css/global.css
@@ -6,16 +6,25 @@ body{
     font-family: "Microsoft YaHei UI", serif;
 }
 
+div{
+    padding: 1%;
+}
+
 #map{
     width: 100%;
     height : 100%;
     padding-bottom: 50%;
 }
 
+label{
+    padding: 1%;
+}
+
 /*Règles pour la barre en haut */
 .topnav {
     background-color: #333;
     overflow: hidden;
+    position: sticky;
 }
 
 .topnav a {
