--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,8 @@ body{
     min-width: 800px;
     min-height: 600px;
     font-family: "Microsoft YaHei UI", serif;
+    margin-left: 0;
+    margin-top: 0;
 }
 
 div{
@@ -11,12 +13,12 @@ div{
 }
 
 #map{
-    width: 96%;
+    width: auto;
     height : 100%;
     padding-bottom: 50%;
 }
 
-.formfield{
+.formfield label{
     width: 100%;
     text-align: right;
 }
@@ -34,7 +36,6 @@ div{
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
 }
 
 .topnav a:hover {
